{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 1172,
  "lineage": "7fbbd196-82d5-271c-7d3a-dd878bd60ec4",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b08702f8675347e1",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:instance/i-0a0709820566512b2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "apdev-bastion-instance-profile",
            "id": "i-0a0709820566512b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-049fbafbe51e3819a"
              }
            ],
            "primary_network_interface_id": "eni-049fbafbe51e3819a",
            "private_dns": "ip-10-0-0-230.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.230",
            "public_dns": "ec2-43-200-245-161.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.245.161",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-096f5912487a350bd",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e3d36341e25a3f2",
            "tags": {
              "Name": "apdev-bastion"
            },
            "tags_all": {
              "Name": "apdev-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d78cbdd729e6ae99"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "i-0a0709820566512b2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.this",
            "module.ec2.aws_iam_role.this",
            "module.ec2.aws_security_group.this",
            "module.ec2.data.aws_ssm_parameter.latest_ami",
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_option_group.this",
            "module.rds.aws_db_parameter_group.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_security_group.this",
            "module.rds.null_resource.init_db",
            "module.rds_proxy.aws_db_proxy.this",
            "module.rds_proxy.aws_db_proxy_default_target_group.this",
            "module.rds_proxy.aws_db_proxy_target.this",
            "module.rds_proxy.aws_iam_role.this",
            "module.rds_proxy.aws_iam_role_policy.this",
            "module.rds_proxy.aws_security_group.this",
            "module.secrets_manager.aws_secretsmanager_secret.proxy",
            "module.secrets_manager.aws_secretsmanager_secret.rds",
            "module.secrets_manager.aws_secretsmanager_secret_version.proxy",
            "module.secrets_manager.aws_secretsmanager_secret_version.rds",
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_eip.nat_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route_table.private_1",
            "module.vpc.aws_route_table.private_2",
            "module.vpc.aws_route_table.private_protect",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_1",
            "module.vpc.aws_route_table_association.private_2",
            "module.vpc.aws_route_table_association.protect_rtb_1",
            "module.vpc.aws_route_table_association.protect_rtb_2",
            "module.vpc.aws_route_table_association.public_1",
            "module.vpc.aws_route_table_association.public_2",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_subnet.private_2",
            "module.vpc.aws_subnet.private_protect_1",
            "module.vpc.aws_subnet.private_protect_2",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-0e8d1f8eacd4ecc12",
            "description": "Application ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8d1f8eacd4ecc12",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apdev-app-alb-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apdev-app-alb-sg"
            },
            "tags_all": {
              "Name": "apdev-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081838a3e26798134"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0e8d1f8eacd4ecc12",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_option_group.this",
            "module.rds.aws_db_parameter_group.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_security_group.this",
            "module.rds.null_resource.init_db",
            "module.rds_proxy.aws_db_proxy.this",
            "module.rds_proxy.aws_db_proxy_default_target_group.this",
            "module.rds_proxy.aws_db_proxy_target.this",
            "module.rds_proxy.aws_iam_role.this",
            "module.rds_proxy.aws_iam_role_policy.this",
            "module.rds_proxy.aws_security_group.this",
            "module.secrets_manager.aws_secretsmanager_secret.proxy",
            "module.secrets_manager.aws_secretsmanager_secret.rds",
            "module.secrets_manager.aws_secretsmanager_secret_version.proxy",
            "module.secrets_manager.aws_secretsmanager_secret_version.rds",
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_eip.nat_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route_table.private_1",
            "module.vpc.aws_route_table.private_2",
            "module.vpc.aws_route_table.private_protect",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_1",
            "module.vpc.aws_route_table_association.private_2",
            "module.vpc.aws_route_table_association.protect_rtb_1",
            "module.vpc.aws_route_table_association.protect_rtb_2",
            "module.vpc.aws_route_table_association.public_1",
            "module.vpc.aws_route_table_association.public_2",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_subnet.private_2",
            "module.vpc.aws_subnet.private_protect_1",
            "module.vpc.aws_subnet.private_protect_2",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-0f4ca25a6df4f4dfb",
            "description": "Monitoring ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4ca25a6df4f4dfb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apdev-monitoring-alb-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apdev-monitoring-alb-sg"
            },
            "tags_all": {
              "Name": "apdev-monitoring-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081838a3e26798134"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0f4ca25a6df4f4dfb",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_option_group.this",
            "module.rds.aws_db_parameter_group.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_security_group.this",
            "module.rds.null_resource.init_db",
            "module.rds_proxy.aws_db_proxy.this",
            "module.rds_proxy.aws_db_proxy_default_target_group.this",
            "module.rds_proxy.aws_db_proxy_target.this",
            "module.rds_proxy.aws_iam_role.this",
            "module.rds_proxy.aws_iam_role_policy.this",
            "module.rds_proxy.aws_security_group.this",
            "module.secrets_manager.aws_secretsmanager_secret.proxy",
            "module.secrets_manager.aws_secretsmanager_secret.rds",
            "module.secrets_manager.aws_secretsmanager_secret_version.proxy",
            "module.secrets_manager.aws_secretsmanager_secret_version.rds",
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_eip.nat_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route_table.private_1",
            "module.vpc.aws_route_table.private_2",
            "module.vpc.aws_route_table.private_protect",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_1",
            "module.vpc.aws_route_table_association.private_2",
            "module.vpc.aws_route_table_association.protect_rtb_1",
            "module.vpc.aws_route_table_association.protect_rtb_2",
            "module.vpc.aws_route_table_association.public_1",
            "module.vpc.aws_route_table_association.public_2",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_subnet.private_2",
            "module.vpc.aws_subnet.private_protect_1",
            "module.vpc.aws_subnet.private_protect_2",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-0d78cbdd729e6ae99",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d78cbdd729e6ae99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "apdev-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apdev-sg"
            },
            "tags_all": {
              "Name": "apdev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081838a3e26798134"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0d78cbdd729e6ae99",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_option_group.this",
            "module.rds.aws_db_parameter_group.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_security_group.this",
            "module.rds.null_resource.init_db",
            "module.rds_proxy.aws_db_proxy.this",
            "module.rds_proxy.aws_db_proxy_default_target_group.this",
            "module.rds_proxy.aws_db_proxy_target.this",
            "module.rds_proxy.aws_iam_role.this",
            "module.rds_proxy.aws_iam_role_policy.this",
            "module.rds_proxy.aws_security_group.this",
            "module.secrets_manager.aws_secretsmanager_secret.proxy",
            "module.secrets_manager.aws_secretsmanager_secret.rds",
            "module.secrets_manager.aws_secretsmanager_secret_version.proxy",
            "module.secrets_manager.aws_secretsmanager_secret_version.rds",
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_eip.nat_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route_table.private_1",
            "module.vpc.aws_route_table.private_2",
            "module.vpc.aws_route_table.private_protect",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_1",
            "module.vpc.aws_route_table_association.private_2",
            "module.vpc.aws_route_table_association.protect_rtb_1",
            "module.vpc.aws_route_table_association.protect_rtb_2",
            "module.vpc.aws_route_table_association.public_1",
            "module.vpc.aws_route_table_association.public_2",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_subnet.private_2",
            "module.vpc.aws_subnet.private_protect_1",
            "module.vpc.aws_subnet.private_protect_2",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-06de76bea9c3f90f1",
            "description": "RDS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06de76bea9c3f90f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "apdev-rds-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apdev-rds-sg"
            },
            "tags_all": {
              "Name": "apdev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081838a3e26798134"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-06de76bea9c3f90f1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_proxy",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-0aeae5c92160b3c2e",
            "description": "RDS Proxy Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aeae5c92160b3c2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "apdev-rds-proxy-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apdev-rds-proxy-sg"
            },
            "tags_all": {
              "Name": "apdev-rds-proxy-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081838a3e26798134"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0aeae5c92160b3c2e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_option_group.this",
            "module.rds.aws_db_parameter_group.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_security_group.this",
            "module.rds.null_resource.init_db",
            "module.secrets_manager.aws_secretsmanager_secret.proxy",
            "module.secrets_manager.aws_secretsmanager_secret.rds",
            "module.secrets_manager.aws_secretsmanager_secret_version.proxy",
            "module.secrets_manager.aws_secretsmanager_secret_version.rds",
            "module.vpc.aws_subnet.private_protect_1",
            "module.vpc.aws_subnet.private_protect_2",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01466591d86989662",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:elastic-ip/eipalloc-01466591d86989662",
            "domain": "vpc",
            "id": "eipalloc-01466591d86989662",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-8-138.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.8.138",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "apdev-eip-a"
            },
            "tags_all": {
              "Name": "apdev-eip-a"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "eipalloc-01466591d86989662",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09edd3584b25184cc",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:elastic-ip/eipalloc-09edd3584b25184cc",
            "domain": "vpc",
            "id": "eipalloc-09edd3584b25184cc",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-38-66-111.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.66.111",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "apdev-eip-c"
            },
            "tags_all": {
              "Name": "apdev-eip-c"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "eipalloc-09edd3584b25184cc",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:internet-gateway/igw-010df244948df1726",
            "id": "igw-010df244948df1726",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "apdev-igw"
            },
            "tags_all": {
              "Name": "apdev-igw"
            },
            "vpc_id": "vpc-081838a3e26798134"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "igw-010df244948df1726",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01466591d86989662",
            "association_id": "eipassoc-0390e10ed805854e2",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b40e3c5af8dfbbec",
            "network_interface_id": "eni-06bcce845e436aadd",
            "private_ip": "10.0.0.115",
            "public_ip": "43.202.8.138",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e3d36341e25a3f2",
            "tags": {
              "Name": "apdev-ngw-a"
            },
            "tags_all": {
              "Name": "apdev-ngw-a"
            },
            "vpc_id": "vpc-081838a3e26798134"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "nat-0b40e3c5af8dfbbec",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09edd3584b25184cc",
            "association_id": "eipassoc-076ef98269e280db8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c6b9d716ec52d3c7",
            "network_interface_id": "eni-06cb771943aa0e2e9",
            "private_ip": "10.0.1.92",
            "public_ip": "3.38.66.111",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00977f9dd14c5a75c",
            "tags": {
              "Name": "apdev-ngw-c"
            },
            "tags_all": {
              "Name": "apdev-ngw-c"
            },
            "vpc_id": "vpc-081838a3e26798134"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "nat-0c6b9d716ec52d3c7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_eip.nat_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-080143fc5519f4764",
            "id": "rtb-080143fc5519f4764",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b40e3c5af8dfbbec",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apdev-private-rtb-a"
            },
            "tags_all": {
              "Name": "apdev-private-rtb-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-081838a3e26798134"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-080143fc5519f4764",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-083d60e812d9a9e5b",
            "id": "rtb-083d60e812d9a9e5b",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c6b9d716ec52d3c7",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apdev-private-rtb-c"
            },
            "tags_all": {
              "Name": "apdev-private-rtb-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-081838a3e26798134"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-083d60e812d9a9e5b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_eip.nat_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_protect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-083e4b1b6d7374994",
            "id": "rtb-083e4b1b6d7374994",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "apdev-protect-rtb"
            },
            "tags_all": {
              "Name": "apdev-protect-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-081838a3e26798134"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-083e4b1b6d7374994",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-072d85b26e99345c3",
            "id": "rtb-072d85b26e99345c3",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-010df244948df1726",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "apdev-public-rtb"
            },
            "tags_all": {
              "Name": "apdev-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-081838a3e26798134"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-072d85b26e99345c3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03863d4ad4b5ad520",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-080143fc5519f4764",
            "subnet_id": "subnet-0f9dc517b84733f5f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-03863d4ad4b5ad520",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_a",
            "module.vpc.aws_route_table.private_1",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ba9059da544e4b6",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-083d60e812d9a9e5b",
            "subnet_id": "subnet-0ecc1094e55b1ed68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-02ba9059da544e4b6",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_eip.nat_c",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this_c",
            "module.vpc.aws_route_table.private_2",
            "module.vpc.aws_subnet.private_2",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "protect_rtb_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd66c6dd3b68f5b7",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-083e4b1b6d7374994",
            "subnet_id": "subnet-0c518a21fa92bd6e7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-0fd66c6dd3b68f5b7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_route_table.private_protect",
            "module.vpc.aws_subnet.private_protect_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "protect_rtb_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008986a57217ae51b",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-083e4b1b6d7374994",
            "subnet_id": "subnet-03cc692737fbbffed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-008986a57217ae51b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_route_table.private_protect",
            "module.vpc.aws_subnet.private_protect_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f9704570d2b4215",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-072d85b26e99345c3",
            "subnet_id": "subnet-06e3d36341e25a3f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-06f9704570d2b4215",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caba66d35c373730",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-072d85b26e99345c3",
            "subnet_id": "subnet-00977f9dd14c5a75c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-0caba66d35c373730",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-0f9dc517b84733f5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9dc517b84733f5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "apdev-private-subnet-a"
            },
            "tags_all": {
              "Name": "apdev-private-subnet-a"
            },
            "vpc_id": "vpc-081838a3e26798134"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-0f9dc517b84733f5f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-0ecc1094e55b1ed68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecc1094e55b1ed68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "apdev-private-subnet-c"
            },
            "tags_all": {
              "Name": "apdev-private-subnet-c"
            },
            "vpc_id": "vpc-081838a3e26798134"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-0ecc1094e55b1ed68",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_protect_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-0c518a21fa92bd6e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c518a21fa92bd6e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "apdev-protect-a"
            },
            "tags_all": {
              "Name": "apdev-protect-a"
            },
            "vpc_id": "vpc-081838a3e26798134"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-0c518a21fa92bd6e7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_protect_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-03cc692737fbbffed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cc692737fbbffed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "apdev-protect-c"
            },
            "tags_all": {
              "Name": "apdev-protect-c"
            },
            "vpc_id": "vpc-081838a3e26798134"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-03cc692737fbbffed",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-06e3d36341e25a3f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e3d36341e25a3f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "apdev-public-subnet-a"
            },
            "tags_all": {
              "Name": "apdev-public-subnet-a"
            },
            "vpc_id": "vpc-081838a3e26798134"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-06e3d36341e25a3f2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-00977f9dd14c5a75c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00977f9dd14c5a75c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "apdev-public-subnet-c"
            },
            "tags_all": {
              "Name": "apdev-public-subnet-c"
            },
            "vpc_id": "vpc-081838a3e26798134"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-00977f9dd14c5a75c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:vpc/vpc-081838a3e26798134",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d564e106f0ba735",
            "default_route_table_id": "rtb-09200571a53c47b1c",
            "default_security_group_id": "sg-09f07baab0354d319",
            "dhcp_options_id": "dopt-04b4d7201744c51a3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081838a3e26798134",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09200571a53c47b1c",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "apdev-vpc"
            },
            "tags_all": {
              "Name": "apdev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "vpc-081838a3e26798134",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.rds",
            "module.file.null_resource.scripts",
            "module.file.random_string.this"
          ]
        }
      ]
    }
  ]
}